--- a/src/Todo.css
+++ b/src/Todo.css
@@ -132,3 +132,14 @@ input {
   background-color: red;
   color: #f4f4f4;
 }
+
+.date-and-time {
+  border: solid 2px gray;
+  padding: 0 2px;
+  border-radius: 10px;
+  margin: 5px;
+}
+.date-and-time p {
+  margin: 5px;
+  font-weight: bold;
+}
