--- a/src/Todo.css
+++ b/src/Todo.css
@@ -143,3 +143,15 @@ input {
   margin: 5px;
   font-weight: bold;
 }
+
+@keyframes bounce {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
